# swoose

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.rst  README.rst  conanfile.py
src/Swoose/: CMakeLists.txt  Files.cmake  config.cmake.in
src/Swoose/App/: SwooseApp.cpp
src/Swoose/App/AppUtils/: CommandLineOptions.cpp  CommandLineOptions.h  TaskManagement.h  Tasks.cpp  Tasks.h
src/Swoose/Python/: ParametrizerPython.cpp  PythonModule.cpp  QmRegionSelectorPython.cpp  README.rst  SwooseUtilitiesPython.cpp  TaskHandlerPython.cpp  __init__.py  pkginit.py  setup.py
src/Swoose/Swoose/: SwooseModule.cpp  SwooseModule.h
src/Swoose/Swoose/MMParametrization/: CalculationManager.cpp  CalculationManager.h  MMParametrizationSettings.h  MolecularSystemPartitioner.cpp  MolecularSystemPartitioner.h  OptimizationSetup.cpp  OptimizationSetup.h  ParameterOptimizer.cpp  ParameterOptimizer.h  ParametrizationData.h  Parametrizer.cpp  Parametrizer.h
src/Swoose/Swoose/MMParametrization/ParametrizationUtils/: AtomicChargesAssembler.cpp  AtomicChargesAssembler.h  ConnectivityGenerator.cpp  ConnectivityGenerator.h  ConstrainedAtomsIdentifier.cpp  ConstrainedAtomsIdentifier.h  FragmentDataDistributor.cpp  FragmentDataDistributor.h  FullHessianAssembler.cpp  FullHessianAssembler.h  ParameterFileWriter.cpp  ParameterFileWriter.h  ReparametrizationHelper.cpp  ReparametrizationHelper.h  SuperfluousFragmentIdentifier.cpp  SuperfluousFragmentIdentifier.h  TitrationHelper.cpp  TitrationHelper.h  UpdateFunctionManager.cpp  UpdateFunctionManager.h
src/Swoose/Swoose/MMParametrization/ReferenceCalculationHelpers/: BasicJobSubmissionHelper.cpp  BasicJobSubmissionHelper.h  DatabaseHelper.cpp  DatabaseHelper.h  DatabaseJobSubmissionHelper.cpp  DatabaseJobSubmissionHelper.h  DatabaseOrderNames.h  DirectCalculationsHelper.cpp  DirectCalculationsHelper.h  ReferenceCalculationsIO.cpp  ReferenceCalculationsIO.h
src/Swoose/Swoose/MachineLearning/: MolecularMachineLearningModel.cpp  MolecularMachineLearningModel.h
src/Swoose/Swoose/MolecularMechanics/: AtomTypesHolder.h  InteractionExclusion.cpp  InteractionExclusion.h  MMExceptions.h  MMParameters.cpp  MMParameters.h  MolecularMechanicsCalculator.cpp  MolecularMechanicsCalculator.h  PotentialTermsHelper.cpp  PotentialTermsHelper.h  ScaledInteractions.cpp  ScaledInteractions.h
src/Swoose/Swoose/MolecularMechanics/GAFF/: GaffAtomTypeIdentifier.cpp  GaffAtomTypeIdentifier.h  GaffCalculatorSettings.h  GaffDefaultParameters.h  GaffMolecularMechanicsCalculator.cpp  GaffMolecularMechanicsCalculator.h  GaffParameterDefaultsProvider.cpp  GaffParameterDefaultsProvider.h  GaffParameterParser.cpp  GaffParameterParser.h  GaffParameters.cpp  GaffParameters.h  GaffPotentialTermsGenerator.cpp  GaffPotentialTermsGenerator.h
src/Swoose/Swoose/MolecularMechanics/Interactions/: Angle.cpp  Angle.h  AngleTerm.cpp  AngleTerm.h  AnglesEvaluator.cpp  AnglesEvaluator.h  Bond.cpp  Bond.h  BondedTerm.cpp  BondedTerm.h  BondsEvaluator.cpp  BondsEvaluator.h  Dihedral.cpp  Dihedral.h  DihedralTerm.cpp  DihedralTerm.h  DihedralsEvaluator.cpp  DihedralsEvaluator.h  Dispersion.cpp  Dispersion.h  DispersionEvaluator.cpp  DispersionEvaluator.h  DispersionTerm.cpp  DispersionTerm.h  Electrostatic.cpp  Electrostatic.h  ElectrostaticEvaluator.cpp  ElectrostaticEvaluator.h  ElectrostaticTerm.cpp  ElectrostaticTerm.h  HydrogenBond.cpp  HydrogenBond.h  HydrogenBondEvaluator.cpp  HydrogenBondEvaluator.h  HydrogenBondParameters.h  HydrogenBondTerm.cpp  HydrogenBondTerm.h  ImproperDihedral.cpp  ImproperDihedral.h  ImproperDihedralTerm.cpp  (+18 more)
src/Swoose/Swoose/MolecularMechanics/Parameters/: AngleParameters.cpp  AngleParameters.h  BondParameters.cpp  BondParameters.h  DihedralParameters.cpp  DihedralParameters.h  DispersionC6Parameters.cpp  DispersionC6Parameters.h  ImproperDihedralParameters.cpp  ImproperDihedralParameters.h  LennardJonesParameters.cpp  LennardJonesParameters.h
src/Swoose/Swoose/QMMM/: InteractionTermEliminator.cpp  InteractionTermEliminator.h  QmmmCalculator.cpp  QmmmCalculator.h  QmmmCalculatorSettings.h  QmmmGradientsEvaluator.cpp  QmmmGradientsEvaluator.h  QmmmHelpers.cpp  QmmmHelpers.h  QmmmHessianEvaluator.cpp  QmmmHessianEvaluator.h
src/Swoose/Swoose/StructurePreparation/: AminoAcidGraphRepresentations.cpp  AminoAcidGraphRepresentations.h  ProteinStructures.h  SpecialCaseHandler.cpp  SpecialCaseHandler.h  StructurePreparationData.h  StructurePreparationHelper.cpp  StructurePreparationHelper.h  StructurePreparationIO.cpp  StructurePreparationIO.h  StructurePreparationSettings.h  StructureProcessor.cpp  StructureProcessor.h
src/Swoose/Swoose/Utilities/: AtomicInformationReader.cpp  AtomicInformationReader.h  BasicJobSubmissionHelper.cpp  BasicJobSubmissionHelper.h  CalculatorOptions.h  ConnectivityFileHandler.cpp  ConnectivityFileHandler.h  FragmentAnalyzer.cpp  FragmentAnalyzer.h  FragmentationHelper.cpp  FragmentationHelper.h  ModuleLoader.h  OptionNames.h  SettingsNames.h  SettingsPopulator.h  SubsystemGenerator.cpp  SubsystemGenerator.h  TitrationFileHandler.cpp  TitrationFileHandler.h  TopologyUtils.cpp  TopologyUtils.h
src/Swoose/Tests/: AppTest.cpp  AtomicInformationReaderTest.cpp  BondOrderRefinementTest.cpp  CMakeLists.txt  DatabaseModeTest.cpp  GaffMolecularMechanicsTest.cpp  InteractionTermEliminatorTest.cpp  JobSubmissionHelperTest.cpp  MolecularMachineLearningTest.cpp  ParametrizationOfLargeSystemsTest.cpp  ParametrizationOfSmallSystemsTest.cpp  QmRegionSelectionTests.cpp  QmmmHelperFunctionsTest.cpp  QmmmTest.cpp  SfamMolecularMechanicsTest.cpp  StructurePreparationTest.cpp  TitrationTest.cpp
src/Swoose/Tests/Files/: atomic_information_file_example.txt  butane_trj.xyz  dermcidin.xyz  dermcidin_fragment.xyz  glutamine.xyz  guanidine_fragment.xyz  insulin_chain_A.xyz  melatonin.xyz  plastocyanin_H.xyz  settings_qm_region_selection_direct.yaml  tests_file_location.h.in
src/Swoose/Tests/TestUtilities/: AminoAcidDataForTests.h  CMakeLists.txt  MockModule.cpp  MockModule.h  MockQmCalculator.cpp  MockQmCalculator.h  ReferenceDataForTests.h
(+140 files in other folders)
